crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class-2.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  v


# Func:
function <[[main]]>:
  frame_size: 6
  length: 13
  const (length=3):
    0: <class desc T>
    1: "v"
    2: "T"
  code:
     0 | load_const [1]
     2 | store_reg r4
     4 | push_none 
     5 | store_reg r5
     7 | create_class [0], r4
    10 | store_global [2]
    12 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  
