crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class-4.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  a = 0
  b = 1


# Func:
function <[[main]]>:
  frame_size: 8
  length: 28
  const (length=4):
    0: <class desc T>
    1: "a"
    2: "b"
    3: "T"
  code:
     0 | load_const [1]
     2 | store_reg r4
     4 | push_small_int value=0
     9 | store_reg r5
    11 | load_const [2]
    13 | store_reg r6
    15 | push_small_int value=1
    20 | store_reg r7
    22 | create_class [0], r4
    25 | store_global [3]
    27 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r7 │                             ●━━━━━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  
