crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class-5.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 0
  test(self):
    print self.v


# Func:
function <test>:
  frame_size: 4
  length: 7
  const (length=1):
    0: "v"
  code:
    0 | load_self 
    1 | load_named [0]
    3 | print 
    4 | push_none 
    5 | ret 
    6 | suspend 

function <[[main]]>:
  frame_size: 7
  length: 21
  const (length=4):
    0: <class desc T>
    1: <func test>
    2: "v"
    3: "T"
  code:
     0 | load_const [1]
     2 | store_reg r4
     4 | load_const [2]
     6 | store_reg r5
     8 | push_small_int value=0
    13 | store_reg r6
    15 | create_class [0], r4
    18 | store_global [3]
    20 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                         ●━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  
